# Final_project

./: .gitignore  CMakeLists.txt  README.md  main.cpp  plot.py  plot_animation.py  pythonplot.py  solver2d.cpp  solver2d.hpp  wtime.hpp
heat_solver_parallel/include/: solver2d.hpp
heat_solver_parallel/src/: main.cpp  solver2d.cpp
